Tweak CSS to avoid title wrapping

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7,15 +7,14 @@ body {
     color: #333;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
     font-size: 18px;
-    margin: 50px auto;
-    min-height: 50%;
-    padding: 0;
+    margin: 0 auto;
+    padding: 50px 0;
     width: 640px;
 }
 
 header h1 {
     font-family: "Great Vibes", sans-serif;
-    font-size: 4em;
+    font-size: 64px;
     margin: 0;
     text-align: center;
 }
@@ -27,11 +26,7 @@ header h1 a {
 
 section div.answer {
     font-family: "Ewert", sans-serif;
-    font-size: 8em;
+    font-size: 144px;
     text-align: center;
     margin-top: 0;
-}
-
-section div.tweet {
-    padding-bottom: 50px;
 }
